[package]

name = "ocb"
version = "0.0.1"
authors = ["Keegan McAllister <kmcallister@mozilla.com>"]
repository = "https://github.com/kmcallister/ocb.rs"
readme = "README.md"
license = "MIT"
description = "OCB mode for authenticated encryption with associated data (AEAD)"

[dependencies]
libc = "0.2"
clear_on_drop = "0.2"

[dependencies.ocb_sys]
version = "*"
path = "ocb_sys"
